Nueva forma de generar el hash, generación de hash redundante eliminado